site/css/style.css
/* ... */
.wordcamp-sponsors li a {
    display: block;
    transition: all .3s ease;
}

.wordcamp-sponsors li a:hover {
    transform: scale(1.05);
}

.wordcamp-sponsors li img {
    height: auto !important;
    display: block;
}

.wordcamp-sponsors.sponsors-community li,
.wordcamp-sponsors.sponsors-diamante li {
    max-width: 30% !important;
/* 3 per line */
}

.wordcamp-sponsors.sponsors-ouro li {
    max-width: 22% !important;
/* 4 per line */
}

.wordcamp-sponsors.sponsors-prata li {
    max-width: 17.1% !important;
/* 5 per line */
}

.wordcamp-sponsors.sponsors-bronze li {
    max-width: 13.8% !important;
/* 6 per line */
}

footer .sponsors-container-home .microsponsors-footer {
    display: none;
}

@media only screen and (max-width: 781px) {
    /* We're going desktop first here - Maybe change this to a higher resolution? */
    .wordcamp-sponsors.sponsors-community li,
            .wordcamp-sponsors.sponsors-diamante li {
        max-width: 46.5% !important;
    /* 2 per line */
    }
    
    .wordcamp-sponsors.sponsors-ouro li {
        max-width: 46.5% !important;
    /* 2 per line as they are 4 makes no sense to have 3 per line */
    }
    
    .wordcamp-sponsors.sponsors-prata li {
        max-width: 30% !important;
    /* 3 per line */
    }
    
    .wordcamp-sponsors.sponsors-bronze li {
        max-width: 30% !important;
    /* 3 per line as 4 is just too small */
    }
}

.page-slug-patrocinadores-sponsors .sponsors-container-home {
    display: none;
}

/* Blog */
@media only screen and (min-width: 782px) {
    body.blog ul.wp-block-post-template,
            body.archive ul.wp-block-post-template {
        overflow: hidden;
    }
    
    body.blog ul.wp-block-post-template li,
            body.archive ul.wp-block-post-template li {
        width: 48%;
        float: left;
        margin: 0 1%;
    }
    
    body.blog ul.wp-block-post-template li:nth-child(odd),
            body.archive ul.wp-block-post-template li:nth-child(odd) {
        clear: both;
    }
}

.wp-block-post-content ul {
    padding-inline-start: 1em;
}

body.blog ul.wp-block-post-template a,
body.archive ul.wp-block-post-template a {
    color: #0073B4;
}

/* Camptix */
.tix_tickets_table,
.tix-ticket-form {
    width: 100%;
}
.tix_tickets_table th.tix-column-description:not([scope="row"]),
.tix_tickets_table th.tix-column-price,
.tix_tickets_table th.tix-column-remaining,
.tix_tickets_table th.tix-column-quantity,
.tix_tickets_table th.tix-column-per-ticket,
.tix-ticket-form th {
    background-color: #0073B4;
    font-weight: bold !important;
    color: #FFFFFF;
}
.tix-tickets-list td {
    text-align: center;
}
.tix_tickets_table th,
.tix_tickets_table td,
.tix-ticket-form th,
.tix-ticket-form td {
    padding: 0.5em 1em;
}
#tix input[type="text"],
#tix input[type="email"],
#tix input[type="url"] {
    border-width: 1px;
    box-sizing: border-box;
    padding: 12px 8px;
}
#tix input[type="submit"] {
    border-radius: 0 !important;
    white-space: nowrap;
    border-style: none;
    background-color: #0073B4;
    cursor: pointer;
    font-weight: bold;
    text-transform: uppercase;
    color: #FFFFFF;
    padding: calc(0.667em + 2px) calc(1.333em + 2px);
}
#tix select {
    padding: 14px 7px;
}
.tix-submit {
    margin-bottom: 3em;
}
.tix-row-covid-waiver label {
    font-weight: bold;
}
#tix-attendees li {
    height: 96px;
}
#tix-attendees .avatar {
    width: 96px;
    height: 96px;
}
#tix-attendees .tix-field {
    margin-left: 106px;
}
#tix-attendees .tix-attendee-name {
    font-weight: bold;
    font-size: 16px;
}
#tix-attendees .tix-columns-4 li {
    width: 23%;
    margin-left: 1%;
    margin-right: 1%;
}
@media only screen and (max-width: 1099px) {
    #tix-attendees .tix-columns-4 li {
        width: 31.333333%;
        margin-left: 1%;
        margin-right: 1%;
    }
}
@media only screen and (max-width: 781px) {
    #tix-attendees .tix-columns-4 li {
        width: 48%;
        margin-left: 1%;
        margin-right: 1%;
    }
}
@media only screen and (max-width: 529px) {
    #tix-attendees .tix-columns-4 li {
        height: auto;
    }
    #tix-attendees .tix-columns-4 li:nth-child( odd ) {
        clear: both;
    }
    #tix-attendees .avatar {
        float: none;
    }
    #tix-attendees .tix-field {
        margin-left: 0px !important;
    }
}


/* Footer */
body.home main .wp-block-group:last-child { /* Fix empty group the comes from nowehere */
    margin-block-start: 0;
}
body footer {
    margin-block-start: 0;
    clear: both;
}
body.home footer { /* Because of 20th aniversary block */
    margin-top: 0px;
}

.wclx23-footer-blue .wp-block-column p {
    margin-top: 0;
}

.wclx23-footer-blue .wp-block-social-links .wp-social-link a {
    background-color: #FFFFFF;
    font-size: 20px;
}

.wclx23-footer-blue .wp-block-social-links .wp-social-link a svg {
    fill: #0073B4;
}

.wp-block-image.wapuussoa figcaption {
    color: #FFFFFF;
}

.wclx23-footer-blue .jetpack_subscription_widget input[type="email"] {
    border-style: solid;
    border-color: #ffffff;
}

.wclx23-footer-blue .jetpack_subscription_widget .wp-block-button__link {
    background-color: #FAAF32 !important;
}

.wclx23-footer-blue .jetpack_subscription_widget {
    width: 90%;
}

@media only screen and (max-width: 781px) {
    .wclx23-footer-blue .wp-block-column {
        margin-bottom: 3em;
    }
    
    .wp-block-image.wapuussoa.alignright {
        float: none !important;
        margin-inline-start: 0 !important;
    }
}

.poweredby a {
    color: inherit;
}

